app/assets/stylesheets/profile.sass
//
.profile-button,
.list-button
  font-size: 1.5rem

.profile-links
  width: 100%
  display: flex
  justify-content: space-between
  overflow: auto

.slam-profile
  z-index: 8
  p
    word-wrap: break-word

.profile-location
  word-wrap: break-word

.profile-notice
  clear: both
  margin-top: 2em
  padding: .3em
  background: lightblue
  border: 1px solid steelblue
  color: steelblue

.profile-alphabadge
  position: absolute
  top: 1.2em
  font-weight: 600

=ico
  display: inline-block
  overflow: hidden
  white-space: nowrap
  text-indent: 200%
  vertical-align: middle
  background-position: 45% center

.alphaheart
  +ico
  width: 2rem
  height: 2rem
  background-image: url(/alphaherz.svg)
  background-size: 6.7rem

.facebook
  +ico
  width: 1.6rem
  height: 1.6rem
  backgroualpnd-image: url(/facebook.svg)
  background-size: 100%
  &:hover,
  &:active
    background-image: url(/facebook-blue.svg)

.slam-profile-video
  width: 540px
  left: 220px
  position: absolute
  height: 100%
  padding: 4.5em 1.2em 1em
  z-index: 3
  background: white
  border-top: 5px solid black
  border-right: 5px solid black
  border-bottom: 5px solid black
  transition: transform 200ms ease
  transform: translate(-150%)
  overflow: hidden

  @media (min-width: 800px)
    width: 700px
    left: 629px

  &.is-open
    transform: translate(0)


.button
  display: block
  padding: 8px 16px
  text-align: center
  white-space: nowrap
  vertical-align: middle
  cursor: pointer
  border: 1px solid transparent
  border-radius: 2px
  background-color: #444
  border-color: #1e1e1e
  color: white !important
  text-decoration: none
  &:hover,
  &:active
    background-color: black

